llm-openai/src/snapshots/llm_openai__chat__tests__chat_stream_parallel_tool_calls.snap
---
source: llm-openai/src/chat.rs
expression: events
---
[
  {
    "type": "text_delta",
    "text": "Reading both files."
  },
  {
    "type": "tool_use_start",
    "id": "00000000000000000000000000",
    "name": "read"
  },
  {
    "type": "tool_use_input_delta",
    "text": "{\"path\":\"a.rs\"} more"
  },
  {
    "type": "tool_use_end"
  },
  {
    "type": "tool_use_start",
    "id": "00000000000000000000000001",
    "name": "read"
  },
  {
    "type": "tool_use_input_delta",
    "text": "{\"path\":\"b.rs\"}"
  },
  {
    "type": "tool_use_end"
  },
  {
    "type": "stop",
    "stop": {
      "type": "end_turn"
    }
  },
  {
    "type": "usage",
    "usage": {
      "input_tokens": 14,
      "output_tokens": 47,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0,
      "estimated": false,
      "cost_usd": 0.0,
      "latency_ms": 0
    }
  }
]
